@@ -4,6 +4,8 @@ Development Progress	:
 ---------------------------
 
 2011-11-10 (SVN):
+    * hw_utils/hwmaster: Removed two unnecessary NULL assignments after
+      freeing a pointer.
     * hw_utils/hwmquery: Fixed a compiler warning in 64 bit due to ssize_t.
 
 2011-11-09 (SVN):
